fix horizontal scrolling bug in detail sidebar

--- a/app/app.scss
+++ b/app/app.scss
@@ -300,27 +300,3 @@ relations-view .fieldvalue:hover {
 .modal-lg {
   min-width: 86%;
 }
-
-/* Document view is used in map and image overview */
-
-.document-info {
-
-  .card-header {
-    background-color: transparent !important;
-  }
-
-  .card {
-    margin-bottom: 0;
-    box-sizing: border-box;
-    background-color: transparent !important;
-  }
-
-  .empty-tab {
-    color: #5a6269;
-  }
-
-  .empty-tab-info {
-    font-style: italic;
-    font-size: 0.9em;
-  }
-}
